--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "YOUR TITLE HERE"
-author: "YOUR NAMES HERE"
+title: "Taobao Consumer Behavior Analysis"
+author: "Yibo Chen and Jiang Zhu"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 ---
