--- a/02-data.Rmd
+++ b/02-data.Rmd
@@ -6,7 +6,7 @@ output:
 # Data sources
 
 ```{r, echo=FALSE}
-df <- read.csv("data/no_pv_data.csv")
+sample_data <- read.csv("sample_data.csv")
 ```
 
 The Primary data source of this project is Alibaba's cloud platform [Tianchi](https://tianchi.aliyun.com/). The data set contains 1 million randomly selected user behavior including click, purchase, adding item to shopping cart and item favording during November 25 to December 03 2017. Each row of the dataset represents a specific user-item interaction, with attributes user ID, item ID, item's category ID, behavior type and timestamp in a CSV files. The following table shows the columns of the dataset:
@@ -14,15 +14,14 @@ The Primary data source of this project is Alibaba's cloud platform [Tianchi](ht
 *Dataset: UserBehavior.csv:*
 
 ```{r, echo=FALSE}
-description <- c("An integer, the serialized ID that represents a user behavior",
+description <- c(
                  "An integer, the serialized ID that represents a user",
                  "An integer, the serialized ID that represents an item",
                  "An integer, the serialized ID that represents the category which the corresponding item belongs to",
                  "A string, enum-type from ('pv', 'buy', 'cart', 'fav')",
-                 "An integer, the timestamp of the behavior",
-                 "An time data, representing the exact time of the behavior")
+                 "An integer, the timestamp of the behavior")
 
-knitr::kable(data.frame(column_names=colnames(df), description=description),col.names=c("Column names", "Discription"))
+knitr::kable(data.frame(column_names=colnames(sample_data)[1:5], description=description),col.names=c("Column names", "Discription"))
 ```
 
 Problems with the dataset:
